# Synthetic-Data-Generator

./: CLI.py  CLI_demo.py  DATA_ENGINE.py  Data_Engine.py  Faker.py  README.md  STRUCTURE_README.md  Template.py  count.py  generater.py  import.py  pyproject.toml  requirements.txt  save.py  seed.py  setup.py  subcategories.py  validation.py
backend/: package-lock.json  package.json
backend/src/: index.js
examples/: categorical_example.ipynb  numeric_example.ipynb  timeseries_example.ipynb
frontend/: index.html  package-lock.json  package.json  vite.config.mts
frontend/src/: App.jsx  styles.css
scripts/: __init__.py  generate_dataset.py  profile_dataset.py
structured_data_generator/: __init__.py  api.py
structured_data_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
structured_data_generator/config/: __init__.py  default_config.py
structured_data_generator/core/: __init__.py  constraints.py  generators.py  utils.py
structured_data_generator/io/: __init__.py  csv_handler.py  json_handler.py
structured_data_generator/profiling/: __init__.py  profiler.py
tests/: __init__.py  test_constraints.py  test_generators.py  test_io.py  test_profiler.py
