[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structured_data_generator"
version = "1.0.0"
description = "A powerful CLI tool to generate realistic synthetic data for testing and development"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.3.0",
    "faker>=8.0.0",
    "numpy"
]

[project.scripts]
generate-dataset = "scripts.generate_dataset:main"

[tool.setuptools]
packages = [
    "structured_data_generator",
    "scripts",
]
